fix image overflow

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ li a:hover {
     margin-bottom: 10px;
 }
 #perImg{
+    overflow: hidden;
     border-radius: 50%;
     max-height: 50%;
 }
